# TradingLab

./: .env.example  .gitignore  .opencode.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  roadmap.md
.claude/: settings.local.json
docs/: 30_day_sprint.md  PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  VPS_DEPLOY.md  beginner-guide.md  decision-log.md  next-level-architecture.md  risk-policy.md  security-checklist.md  trading212-agent-skills-analysis.md  vps-deployment-guide.md
memory/: position_peaks.json  strategy.md  telegram_workflow_design.md  trade_log.md
prompts/: alpha_discovery.txt  chatgpt_sparring_prompt.md  claude_code_start.md  strategy_mutation.txt
scripts/: aggressive_demo_scan.py  bull-telegram-bot.service  bull-watcher.service  com.sidtradinglab.dashboard.plist  com.sidtradinglab.marketclose.plist  com.sidtradinglab.marketopen.plist  com.sidtradinglab.midday.plist  com.sidtradinglab.premarket.plist  com.sidtradinglab.telegrambot.plist  com.sidtradinglab.weekly.plist  dashboard_server.py  debug_atr.py  e2e_vps_test.py  install_mcp.sh  jarvis.py  run_discord_bot.sh  run_marketclose.sh  run_marketopen.sh  run_midday.sh  run_premarket.sh  run_weekly.sh  seed_registry.py  setup-watcher.sh  setup_dashboard_server.sh  setup_systemd.sh  setup_telegram_bot.sh  telegram_bot.py  telegram_bot_unified.py  test_atr.py  trace_atr.py
skills/: memory.md  momentum-trading.md  portfolio-rebalance.md  reflection.md  risk-management.md  routines.md  trading.md
systemd/: ai.hermes.seed-registry.service  (+1 more)
(+127 files in other folders)
